--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -52,8 +52,8 @@
         <p>Upload a <a target="_blank" href="/choosing-a-topic#thumbnail-requirements">royalty free and eye catching</a> thumbnail image:</p>
         <%= f.file_field :thumbnail %>
       </div>
-      <p>Give credit for your thumbnail image (Required). To show correctly, use the formatting: company's name + comma + full url to the site. See placeholder for example.</p>
-      <%= f.text_field :thumbnail_credits, placeholder: 'Pexels, https://www.pexels.com/photo/photo-of-woman-looking-on-computer-3059748/', class: "mb-0" %>
+      <p>Give credit for your thumbnail image (Required). To show correctly, use the formatting: photographer's last name (if given) + "from" + company's name + comma + full url to the site. See placeholder for example.</p>
+      <%= f.text_field :thumbnail_credits, placeholder: 'Langevin from Pexels, https://www.pexels.com/photo/woman-in-a-baseball-cap-sitting-by-a-painting-with-paints-10752105/', class: "mb-0" %>
       <% if (@pitch.user_id.eql? current_user.id) %>
         <p>
           <i >
