--- a/app/views/pages/email_preferences.html.erb
+++ b/app/views/pages/email_preferences.html.erb
@@ -1,18 +1,24 @@
 <div class="skinny_wrapper" style="padding-top: 30px;">
   <h1>Update your email preferences</h1>
-  <p>Select which lists you would like to receive emails from.</p>
-  <%= form_for(:pages, url:"/email-preferences?email=#{params[:email]}&id=#{params[:id]}") do |f| %>
-    <%= f.hidden_field :email, :value => params[:email] %>
-    <%= f.hidden_field :id, :value => params[:id] %>
-    <p>
-      <%= f.check_box :newsletter, :value => @subscribed_to_readers, :checked => @subscribed_to_newsletter, class: "text_field" %> Weekly editor picks
-    </p>
-    <p>
-      <%= f.check_box :writer_newsletter, :value => @subscribed_to_writers, :checked => @subscribed_to_writer_newsletter, class: "text_field" %> Weekly writer newsletter
-    </p>
-    <p>
-      <%= f.check_box :writer, :value => @subscribed_to_writer_updates, :checked => @subscribed_to_writer_updates, class: "text_field" %> Writer notifications about your account
-    </p>
-    <%= f.submit "Save changes", class: "submit_btn" %>
+  <% if !@subscriber.present? %>
+    <p>Oops, we couldn't find the correct parameters in the url. Try clicking on Email Preferences from an email you received or logging in (if you're a writer).</p>
+  <% else %>
+    <p>Select which lists you would like to receive emails from.</p>
+    <%= form_for(:pages, url:"/email-preferences?email=#{params[:email]}&token=#{params[:token]}") do |f| %>
+      <%= f.hidden_field :email, :value => params[:email] %>
+      <%= f.hidden_field :token, :value => params[:token] %>
+      <p>
+        <%= f.check_box :newsletter, :value => @subscribed_to_readers, :checked => @subscribed_to_newsletter, class: "text_field" %> Subscriber newsletter (newsletters like Editor Picks, sent to all subscribers)
+      </p>
+      <% if @subscriber.user_id.present? %>
+        <p>
+          <%= f.check_box :writer_newsletter, :value => @subscribed_to_writers, :checked => @subscribed_to_writer_newsletter, class: "text_field" %> Writer newsletter (updates sent to all writers)
+        </p>
+        <p>
+          <%= f.check_box :writer, :value => @subscribed_to_writer_updates, :checked => @subscribed_to_writer_updates, class: "text_field" %> Writer notifications (specific about your account)
+        </p>
+      <% end %>
+      <%= f.submit "Save changes", class: "submit_btn" %>
+    <% end %>
   <% end %>
 </div>
