added tracking url to editor picks urls

--- a/app/views/application_mailer/editor_picks.html.erb
+++ b/app/views/application_mailer/editor_picks.html.erb
@@ -180,7 +180,7 @@
                                           <tbody>
                                             <tr>
                                               <td align="center" valign="top">
-                                                <a href="https://theteenmagazine.com/<%= post.slug %>" title="" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://theteenmagazine.com/<%= post.slug %>">
+                                                <a href="https://theteenmagazine.com/<%= post.slug %>" title="" target="_blank" data-saferedirecturl="https://www.google.com/url?q=https://theteenmagazine.com/<%= post.slug %>?utm_source=newsletter&utm_medium=email&utm_campaign=editor+picks&utm_id=<%= @newsletter.id %>">
                                                   <img alt="" src="<%= url_for(post.thumbnail.variant(resize_to_fill: [540, 340])) %>" width="264" style="max-width:719px;border:0;height:auto;outline:none;text-decoration:none;vertical-align:bottom" class="m_-3653343243659045546mcnImage CToWUd" data-bit="iit">
                                                 </a>
                                               </td>
