--- a/app/views/application_mailer/featured_in_newsletter.html.erb
+++ b/app/views/application_mailer/featured_in_newsletter.html.erb
@@ -8,11 +8,17 @@
   </head>
 
   <body>
-    <h1>Your article was chosen for this week's newsletter!</h1>
-    <p><%= @user.first_name %>, we wanted to let you know that your article, <%= link_to @post.title, @post %>,
-      was chosen to be featured in The Teen Magazine's newsletter! This is a huge accomplishment and means that our admins thought
-      that your article was in the top 10% of all articles published on The Teen Magazine.
-      It was sent out this morning with just four other articles to our thousands of email subscribers. Amazing job!</p>
+    <h1>Your article was chosen in the editor picks newsletter!</h1>
+    <p>
+      <%= @user.first_name %>, we wanted to let you know that your article, <%= link_to @post.title, @post %>,
+      was chosen to be featured in The Teen Magazine's newsletter! This means that our editors were especially impressed by your 
+      article and wanted to send it to our 3000 email subscribers! Make sure to check your inbox so that you see it! 
+    <p>
+      If you didn't get the newsletter, check your Email Preferences on your dashboard and make sure you have "Reader Newsletter" checked.
+    </p>
+    <p>
+      Amazing job!
+    </p>
     <p>Best Regards,<br/>Editor Team</p>
   </body>
 </html>
