--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -4,7 +4,14 @@
       <div class="featured individual">
         <div class="featured_img">
           <% if @posts_approved_0[0].thumbnail.attached? %>
-            <%= link_to(image_tag(@posts_approved_0[0].thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
+            <%= link_to(@posts_approved_0[0]) do %>
+              <div class="w-100 position-relative">
+                <% if @posts_approved_0[0].rank.present? && @posts_approved_0[0].rank <= 10 %>
+                  <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending 🔥</span>
+                <% end %>
+                <%= image_tag(@posts_approved_0[0].thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: @posts_approved_0[0].title, class: "image_thumbnail") %>
+              </div>
+            <% end %>
           <% end %>
         </div>
         <h3 class="article_title"><%= link_to @posts_approved_0[0].title, @posts_approved_0[0] %></h3>
@@ -22,7 +29,12 @@
       <% @posts_approved_0[1..4].each do |post| %>
         <div class="thumbnail">
           <% if post.thumbnail.attached? %>
-            <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [300,150], format: 'webp'), alt: post.title, :class => "image_thumbnail"), post )%>
+            <%=link_to(post) do %>
+              <% if @posts_approved_0[0].rank.present? && @posts_approved_0[0].rank <= 10 %>
+                <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending 🔥</span>
+              <% end %>
+              <%= image_tag(post.thumbnail.variant(resize_to_fill: [300,150], format: 'webp'), alt: post.title, :class => "image_thumbnail") %>
+            <% end %>
           <% end %>
           <div class="thumbnail--container">
             <h3 class="article_title"><%= link_to post.title.truncate_words(14), post %></h3>
