--- a/app/views/welcome/partials/_recents.html.erb
+++ b/app/views/welcome/partials/_recents.html.erb
@@ -1,7 +1,14 @@
 <div class="ctgry_section">
   <% @posts_approved_last.each do |post| %>
     <div class="ctgry_article recent mb-4">
-      <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [560,280]), alt: post.title, class: "image_recent_articles"), post )%>
+      <%= link_to(post) do %>
+        <div class="w-100 position-relative">
+          <% if post.rank.present? && post.rank <= 5 %>
+            <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending in <%= post.category.name %> 🔥</span>
+          <% end %>
+          <%= image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title, class: "image_recent_articles") %>
+        </div>
+      <% end %>
       <h1><%= link_to post.title, post %></h1>
       <p class="category m-0"><%= link_to(post.category.name, post.category) %></p>
       <div class="d-flex flex-wrap overflow-hidden align-items-center justify-content-between">
