--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -22,7 +22,14 @@
             <% @posts.each do |post| %>
               <div class="thumbnail d-flex">
                 <div class="child container--image">
-                  <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), :class => "image_thumbnail"), post )%>
+                  <%=link_to(post) do %>
+                    <div class="w-100 position-relative">
+                      <% if post.rank.present? && post.rank <= 8 %>
+                          <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending in <%= post.category.name %> 🔥</span>
+                      <% end %>
+                      <%= image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title, class: "image_thumbnail") %>
+                    </div>
+                  <% end %>   
                 </div>
                 <div class="child category-show recent">
                   <h3 class="mb-3 pl-3 pr-3" style="line-height: 0.8"><%= link_to post.title, post %></h3>
