--- a/app/views/welcome/partials/_recents.html.erb
+++ b/app/views/welcome/partials/_recents.html.erb
@@ -3,14 +3,14 @@
     <div class="ctgry_article recent mb-4">
       <%= link_to(post) do %>
         <div class="w-100 position-relative">
-          <% if post.rank.present? && post.rank <= 5 %>
+          <% if post.rank.present? && post.rank <= 6 %>
             <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending in <%= post.category.name %> 🔥</span>
           <% end %>
           <%= image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title, class: "image_recent_articles") %>
         </div>
       <% end %>
       <h1><%= link_to post.title, post %></h1>
-      <p class="category m-0"><%= link_to(post.category.name, post.category) %></p>
+      <p class="category m-0"><%= link_to(post.category.name, post.category, class: "category-name") %></p>
       <div class="d-flex flex-wrap overflow-hidden align-items-center justify-content-between">
         <div class="author d-table-cell align-middle">
           <% @profile = post.user.profile.attached? ? post.user.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
