--- a/app/views/posts/partials/_recent.html.erb
+++ b/app/views/posts/partials/_recent.html.erb
@@ -1,6 +1,11 @@
 <% @recent.each do |post| %>
-  <div class="ctgry_article" style="margin-bottom: 18px;">
-    <%= link_to(image_tag(post.thumbnail.variant(resize_to_fill: [150, 100])), post) %>
+  <div class="ctgry_article position-relative" style="margin-bottom: 18px;">
+    <%=link_to(post) do %>
+      <% if post.rank.present? && post.rank <= 8 %>
+        <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending 🔥</span>
+      <% end %>
+      <%= image_tag(post.thumbnail.variant(resize_to_fill: [150,100], format: 'webp'), alt: post.title) %>
+    <% end %>
     <div class="paragraph" style="margin-top: -3px">
       <p><%= link_to(post.title.truncate_words(12), post) %></p>
     </div>
