more promoted posts

--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -47,7 +47,7 @@
           <li><a href="/categories/student-life">Student Life</a></li>
           <li><a href="/categories/wellness">Wellness</a></li>
           <li><a href="/categories/beauty-style">Beauty & Style</a></li>
-          <li><a href="/categories/culture">Culture</a></li>
+          <li><a href="/categories/pop-culture">Pop Culture</a></li>
           <li><a href="/categories/relationships">Relationships</a></li>
           <li><a href="/categories/opinion">Opinion</a></li>
         </ul>
