--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -22,7 +22,7 @@
       <a class="link" href="/categories/student-life">Student Life</a>
       <a class="link" href="/categories/wellness">Wellness</a>
       <a class="link" href="/categories/beauty-style">Beauty & Style</a>
-      <a class="link" href="/categories/culture">Culture</a>
+      <a class="link" href="/categories/pop-culture">Pop Culture</a>
       <a class="link" href="/categories/relationships">Relationships</a>
       <a class="link" href="/categories/lifestyle">Lifestyle</a>
       <a class="link" href="/categories/opinion">Op-Ed</a>
