--- a/app/views/layouts/partials/_slide-in-menu.html.erb
+++ b/app/views/layouts/partials/_slide-in-menu.html.erb
@@ -7,7 +7,7 @@
   <a href="/categories/student-life">student life</a>
   <a href="/categories/wellness">wellness</a>
   <a href="/categories/beauty-style">beauty & style</a>
-  <a href="/categories/culture">culture</a>
+  <a href="/categories/pop-culture">pop culture</a>
   <a href="/categories/relationships">relationships</a>
   <a href="/categories/opinion">opinion</a>
   <a href="/apply">apply</a>
