--- a/app/views/application_mailer/featured_in_trending.html.erb
+++ b/app/views/application_mailer/featured_in_trending.html.erb
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <h3>Your article was chosen in the editor picks newsletter!</h3>
+    <h3>Your article was featured in The Teen Magazine's top trending articles newsletter!</h3>
     <p>
       <%= @user.first_name %>, we wanted to let you know that your article, <%= link_to @post.title, @post %>,
-      was chosen to be featured in The Teen Magazine's newsletter! This means that our editors were especially impressed by your 
-      article and wanted to send it to our 3000 email subscribers! Make sure to check your inbox so that you see it! 
+      was included in The Teen Magazine's top trending articles newsletter! This means that your article is receiving a lot of views
+      and we wanted to promote it to our 3000 email subscribers! Make sure to check your inbox so that you see it! 
     <p>
       If you didn't get the newsletter, check your Email Preferences on your dashboard and make sure you have "Reader Newsletter" checked.
     </p>
