--- a/app/views/newsletters/previews/_weekly_picks.html.erb
+++ b/app/views/newsletters/previews/_weekly_picks.html.erb
@@ -147,29 +147,35 @@
                                   <tbody>
                                     <tr>
                                       <td valign="top" style="padding: 12px;">
-                                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;border-collapse:collapse">
-                                          <tbody>
-                                            <tr>
-                                              <td valign="top">
-                                                <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%;min-width:100%;border-collapse:collapse" width="100%">
-                                                  <tbody>
-                                                    <tr>
-                                                      <td valign="top" style="padding-top:0;padding-right:18px;padding-bottom:9px;padding-left:18px;word-break:break-word;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:14px;line-height:150%;text-align:left">
-                                                        <p dir="ltr" style="text-align:left;margin:10px 0;padding:0;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%">
-                                                          <font face="playfair display, georgia, times new roman, serif">
-                                                            <span style="font-size:20px">
-                                                              Editor Pick #<%= index + 1 %>
-                                                            </span>
-                                                          </font>
-                                                        </p>
-                                                      </td>
-                                                    </tr>
-                                                  </tbody>
-                                                </table>
-                                              </td>
-                                            </tr>
-                                          </tbody>
-                                        </table>
+                                          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="min-width:100%;border-collapse:collapse">
+                                            <tbody>
+                                              <tr>
+                                                <td valign="top">
+                                                  <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%;min-width:100%;border-collapse:collapse" width="100%">
+                                                    <tbody>
+                                                      <tr>
+                                                        <td valign="top" style="padding-top:0;padding-right:18px;padding-bottom:9px;padding-left:18px;word-break:break-word;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:14px;line-height:150%;text-align:left">
+                                                          <p dir="ltr" style="text-align:left;margin:10px 0;padding:0;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%">
+                                                            <font face="playfair display, georgia, times new roman, serif">
+                                                              <% if @newsletter.subheader.present? %>
+                                                                <span style="font-size:20px">
+                                                                  Editor Pick #<%= index + 1 %>
+                                                                </span>
+                                                              <% else %>
+                                                                <span style="font-size:20px">
+                                                                  trending in <%= post.category.name %> 🔥
+                                                                </span>
+                                                              <% end %>
+                                                            </font>
+                                                          </p>
+                                                        </td>
+                                                      </tr>
+                                                    </tbody>
+                                                  </table>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
                                         <table border="0" cellpadding="0" cellspacing="0" width="264" style="border-collapse:collapse;display:inline-block;padding-bottom: 8px;">
                                           <tbody>
                                             <tr>
