--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -58,9 +58,9 @@
             <% end %>
             <h1 class="title_article_show"><%= @post.title %></h1>
           </div>
-          <div class="d-flex align-items-center justify-content-between pb-2">
+          <div class="d-flex flex-wrap align-items-center justify-content-between pb-2">
             <%= link_to @post.category do %>
-              <h3 class="m-0 text-nowrap" id="category_title">
+              <h3 class="m-0 mr-1 text-nowrap" id="category_title">
                 <%= @post.category.name %>
               </h3>
             <% end %>
