--- a/app/views/application_mailer/editor_picks.html.erb
+++ b/app/views/application_mailer/editor_picks.html.erb
@@ -214,7 +214,7 @@
                                                 <table>
                                                   <tr>
                                                     <td  valign="middle">
-                                                      <% @profile = post.user.profile.attached? ? post.user.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
+                                                      <% @profile = post.user.profile.attached? ? post.user.profile.variant(resize_to_fill: [100,100]) : "https://www.theteenmagazine.com/assets/profile_image-d8facbb469f1bc2077639f9d92f2c56bbf1b5c7e144045d67a2aa0f80364ba41.jpg" %>
                                                       <%= image_tag(@profile, :style => "display: block; border-radius: 50%; margin-right: 5px; min-width: 30px !important;max-width: 30px !important;max-height: 30px !important;") %>
                                                     </td>
                                                     <td  valign="middle">
