--- a/app/views/newsletters/previews/_weekly_picks.html.erb
+++ b/app/views/newsletters/previews/_weekly_picks.html.erb
@@ -211,7 +211,7 @@
                                                     <td  valign="middle">
                                                       <p dir="ltr" style="text-align:center;margin:10px 0;padding:0;color:#202020;font-family:'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;font-size:16px; color: #545454;">
                                                         <font face="playfair display, georgia, times new roman, serif">
-                                                          <%= post.user.full_name %>, <span style="white-space: nowrap;"><%= post.published_at.in_time_zone&.strftime("%b %d") %></span>
+                                                          <%= post.user.full_name %>, <span style="white-space: nowrap;"><%= post.publish_at.in_time_zone&.strftime("%b %d") %></span>
                                                         </font>
                                                       </p>
                                                     </td>
