added discord widget to homepage and added link to invite emails

--- a/app/views/application_mailer/accepted_editor_email.html.erb
+++ b/app/views/application_mailer/accepted_editor_email.html.erb
@@ -13,7 +13,8 @@
       Your editor application impressed our admin team, and after careful review, we have decided that you would make a great addition to The Teen Magazine's Editor Team. Only a small fraction of our writers will ever become an editor for The Teen Magazine, and we want to congratulate you on this huge accomplishment.
     </p>
     <p>
-      To view the changes made to your account, <a href="https://www.theteenmagazine.com/login">sign into your account</a>. You will be prompted to complete an onboarding process before accessing your new editor dashboard. The onboarding docs will explain the monthly assignments required to remain on the editor team.
+      To view the changes made to your account, <a href="https://www.theteenmagazine.com/login">sign into your account</a>. You will be prompted to complete an onboarding process before accessing your new editor dashboard. The onboarding docs will explain the monthly assignments required to remain on the editor team. 
+      Please also make sure that you've joined the discord <a href="https://discord.gg/6qjaN6zMjk">here</a> and update your role in the welcome channel to "Editor". This is important to join the right channels.
     </p>
     <p>Best Regards,<br>Mia Johansson</p>
     <div>
