--- a/app/views/users/partials/_featured_writers.html.erb
+++ b/app/views/users/partials/_featured_writers.html.erb
@@ -7,7 +7,7 @@
 </style>
 
 <!--Carousel Wrapper-->
-<div class="mb-2">
+<div>
   <h6 class="mb-4 text-center ml-4 mr-4">Meet the writers published this week on The Teen Magazine</h6>
   <div id="multi-item-example" class="carousel slide">
     <!--Slides-->
