--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -16,6 +16,7 @@
     <p>Your next steps:</p>
     <ol>
       <li>Log into your new account <%= link_to "here", "https://www.theteenmagazine.com/login" %>. Your username is <b style="color: blue;"><%= @user.email %></b> and your temporary password is <b style="color: blue;"><%= @user.password %></b>.</li>
+      <li>Join the writer discord <a href="https://discord.gg/6qjaN6zMjk">here</a> and follow the directions in the welcome channel.</li>
       <li>Complete the onborading process. It will walk you through setting up your profile and starting your first article.</li> 
     </ol>
     <p>We look forward to reading your first submission and welcoming you to our writer community! If you have any questions, please reply to this email or reach out to me directly at mia@theteenmagazine.com at any time.</p>
