--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -33,12 +33,12 @@
         <p>Thumbnail Preview</p>
         <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), :class => "image_max_400") %>
         <div class="mt-4 mb-2 d-block">
-          <p class="d-inline">Upload different thumbnail image:</p>
+          <p class="d-inline">Upload different thumbnail image that meets the <a class="text-decoration-underline" target="_blank" href="/finding-images">image policy requirements</a>:</p>
           <%= f.file_field :thumbnail %>
         </div>
       <% else %>
         <div class="mt-4 mb-2 d-block">
-          <p class="d-inline">Upload thumbnail image:</p>
+          <p class="d-inline">Upload thumbnail image that meets the <a class="text-decoration-underline" target="_blank" href="/finding-images">image policy requirements</a>:</p>
           <%= f.file_field :thumbnail %>
         </div>
       <% end %>
