--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -24,6 +24,9 @@
           </div>
         <% end %>
         <%= render "/users/partials/featured_writers", users: @featured_writers, cached: true %>
+        <div class="d-flex align-items-center justify-content-center">
+          <iframe src="https://discord.com/widget?id=1081601449550688286&theme=dark" width="100%" height="200" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
         <div class="mt-3">
           <div class="card whats-new-wrapper" style="border-radius: 10px; overflow: hidden;"
             <% if @show_onboarding_full %>
@@ -50,7 +53,7 @@
         </div>
         <%= link_to("Extensions page", "/writers/#{@user.slug}/extensions", class: "link_grn") %><br>
         <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn") %><br>
-        <%= link_to("Email preferences", "/email-preferences?email=#{@user.subscribers.last.email}&token=#{@user.subscribers.last.token}", class: "link_grn") %><br>
+        <%= link_to("Email preferences", "/email-preferences?email=#{@user.subscribers.last&.email}&token=#{@user.subscribers.last&.token}", class: "link_grn") %><br>
         <div class="links"
           <% if @show_onboarding_full %>
             data-step data-index="5" data-onboarding-content="New applications have become open to you. If you want to apply to our editor team, we suggest having at four or more published articles on The Teen Magazine before applying to have the best chance."
