added comments requirement for editors

--- a/app/views/application_mailer/comment_added.html.erb
+++ b/app/views/application_mailer/comment_added.html.erb
@@ -7,6 +7,10 @@
     </style>
   </head>
   <body>
-    <p><%= @user.first_name %>, there is a new comment on one of your recent articles! To see the comment, click <%= link_to "here", @post, :style => "color: #4ABEB6;"%>.</p>
+    <p>
+      <%= @user.first_name %>, there is a new comment on one of your recent articles! 
+      To see the comment, click <%= link_to "here", @post, :style => "color: #4ABEB6;"%>. 
+      If it was another writer who commented, please consider commenting on one of their articles to keep the conversation going!
+    </p>
   </body>
 </html>
