--- a/app/views/application_mailer/remind_editors_of_assigments.html.erb
+++ b/app/views/application_mailer/remind_editors_of_assigments.html.erb
@@ -12,7 +12,7 @@
     <h1>Happy <%= @month %>!</h1>
     <img style="display: block; max-width: 100%; width: 400px; margin: 0 auto;" src="<%= @gifs[Date.today.month - 1] %>">
     <p>
-      This is just an automated reminder that <%= @pitches_requirement %> pitches and <%= @reviews_requirement %> reviews will be due at the end of the month. This month's assignments are also reflected on your editor dashboard.
+      This is just an automated reminder that <%= @pitches_requirement %> pitches, <%= @reviews_requirement %> reviews, and <%= @comments_requirement %> comments will be due at the end of the month. This month's assignments are also reflected on your editor dashboard.
     </p>
     <p>
       If you would no longer like to be an editor and receive these emails, please reply to this email and we can take you off the editor list. Have a great start to <%= @month %>!
