--- a/app/views/application_mailer/editor_missed_deadline_1.html.erb
+++ b/app/views/application_mailer/editor_missed_deadline_1.html.erb
@@ -11,7 +11,7 @@
     <p>Hi <%= @user.first_name %>,</p>
     <p>
       This is an automated email letting you know that have not completed the editor assignments for <%= @month %>.
-      You currently have completed <%= @editor_pitches_cnt %>/<%= @pitches_requirement %> pitches and <%= @editor_reviews_cnt %>/<%= @reviews_requirement %> reviews.
+      You currently have completed <%= @editor_pitches_cnt %>/<%= @pitches_requirement %> pitches, <%= @editor_reviews_cnt %>/<%= @reviews_requirement %> reviews, and <%= @editor_comments_cnt %>/<%= @comments_requirement %> comments.
       Missing two deadlines in a row will result in your removal from the editor team.
       Please do not ask for an extension as no exceptions will be made, but it is okay if you needed to skip this month if your workload was too overwhelming (if this is the case, there is no need to reply to this email).
       As long as you meet the editor assignments for next month, no action will be taken.
