--- a/app/views/application_mailer/editor_warning_deadline_2.html.erb
+++ b/app/views/application_mailer/editor_warning_deadline_2.html.erb
@@ -10,7 +10,7 @@
   <body>
     <p>Hi <%= @user.first_name %>,</p>
     <p>
-      This is an automated email letting you know that you are not on track to completing the editor assignments for <%= @month %>. You currently have completed <%= @editor_pitches_cnt %>/<%= @pitches_requirement %> pitches and <%= @editor_reviews_cnt %>/<%= @reviews_requirement %> reviews.
+      This is an automated email letting you know that you are not on track to completing the editor assignments for <%= @month %>. You currently have completed <%= @editor_pitches_cnt %>/<%= @pitches_requirement %> pitches, <%= @editor_reviews_cnt %>/<%= @reviews_requirement %> reviews, and <%= @editor_comments_cnt %>/<%= @comments_requirement %> comments.
       You did not meet last month's editor deadline, and missing this month will result in your removal from the editor team. No exceptions will be made for two consecutively missed deadlines. Please log into your editor dashboard to get caught up on the editor assignments for this month.
     </p>
     <p>If you would no longer like to be an editor and receive these emails, please reply to this email and we can take you off the editor list.</p>
