--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -16,7 +16,7 @@
                   <% if post.rank.present? && post.rank <= 5 %>
                     <span class="badge badge-pink" style="position: absolute; z-index: 10000; top: 5px; left: 5px;">trending in <%= post.category.name %> 🔥</span>
                   <% end %>
-                  <%= image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: post.title, class: "image_thumbnail") %>
+                  <%= render 'posts/partials/header_image', post: post, img_class: "image_thumbnail" %>
                 </div>
               <% end %>
               </div>
