--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -21,16 +21,7 @@
   <% else %>
     <p class="banner_stts">In Progress</p>
   <% end %>
-  <% if @post.thumbnail.attached? %>
-    <%= image_set_tag url_for(@post.thumbnail.variant(resize_to_fill: [800, 560], format: 'webp')), { 
-     url_for(@post.thumbnail.variant(resize_to_fill: [550], format: 'webp'))  => '550w', 
-     url_for(@post.thumbnail.variant(resize_to_fill: [630], format: 'webp')) => '630w', 
-     url_for(@post.thumbnail.variant(resize_to_fill: [440], format: 'webp')) => '440w', 
-     url_for(@post.thumbnail.variant(resize_to_fill: [738], format: 'webp')) => '738w', 
-     url_for(@post.thumbnail.variant(resize_to_fill: [100], format: 'webp')) => '100w', 
-     url_for(@post.thumbnail.variant(resize_to_fill: [1200, 845], format: 'webp')) => '1200w' 
-   }, sizes: '100vw, 800px', alt: 'logo', id: 'logo', class: "post_image" %>
-  <% end %>
+  <%= render 'posts/partials/header_image', post: @post, img_class: "post_image" %>
 </div>
 </div>
 <div class="flex_wrapper_posts mb-4">
